manifests/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        volumeMounts:
        - name: data-vol
          mountPath: /usr/share/nginx/html
        - name: secret-vol
          mountPath: /etc/nginx/secrets
          readOnly: true
      volumes:
      - name: data-vol
        persistentVolumeClaim:
          claimName: nginx-data-pvc
      - name: secret-vol
        emptyDir:
          medium: Memory
